@@ -1,11 +1,15 @@
 XXXXXXXXXXXX  - XXXXXXXXX
 ==========================
 
-  * Augment known mimetypes with Windows mimetypes, if available.
+  * Include aliases in the list of mimetypes for a entry. Based on
+    patch by Jean Jordaan
     [dreamcatcher]
 
   * Use a SAX-based parser instead of minidom to improve Zope startup
     time (by 17 seconds on my Pismo) and memory footprint.
+    [dreamcatcher]
+
+  * Augment known mimetypes with Windows mimetypes, if available.
     [dreamcatcher]
 
 1.3.7-final01 - 2005-10-11
